# learn-agentic-rag-end-to-end

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
00-foundations/: 01_llm_basics.ipynb  02_rag_theory.ipynb  03_vector_stores.ipynb  README.md
01-basic-rag/: 01_simple_rag.ipynb  01_simple_rag_answered.ipynb  README.md
