[project]
name = "learn-agentic-rag-end-to-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.88.0",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.3.0",
]
